--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sidharth Mohanty.</title>
-    <script type="module" crossorigin src="/assets/index.0d9e54e2.js"></script>
-    <link rel="stylesheet" href="/assets/index.651185f2.css">
+    <style>
+      a {
+        color: brown;
+      }
+    </style>
+    <script type="module" crossorigin src="/assets/index.92dc4f5b.js"></script>
+    <link rel="stylesheet" href="/assets/index.013f56d7.css">
   </head>
   <body>
     <div id="app"></div>
