--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sidharth Mohanty.</title>
-    <style>
-      a {
-        color: brown;
-      }
-    </style>
-    <script type="module" crossorigin src="/assets/index.92dc4f5b.js"></script>
-    <link rel="stylesheet" href="/assets/index.013f56d7.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Sidharth Mohanty.</title><script defer="defer" src="/static/js/main.09166599.js"></script><link href="/static/css/main.a269e7a2.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
